# C-algorithms

./: CMakeLists.txt  LICENSE  Matrix.cpp  Matrix.h  Memo.cpp  README.md  arrays_tasks.cpp  arrays_tasks.h  dynamic_arrays.cpp  dynamic_arrays.h  main.cpp  pointers.cpp  pointers.h  string_tasks.cpp  string_tasks.h
